# feedback-report-generator

./: .dockerignore  .env  Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  dump.json  pyproject.toml  requirements.txt
core/: settings.py  urls.py
report/: models.py  tasks.py  urls.py  views.py
report/migrations/: 0001_initial.py  0002_reporttask_pdf_path.py  0003_rename_pdf_path_reporttask_file_path_and_more.py
