[project]
name = "feedback-report-generator"
version = "2.1.3"
description = "feedback report generatot"
authors = [
    {name = "ghiri35",email = "ghiripdkt2017@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "reportlab (==4.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "24.4.0"
isort = "5.13.2"

